[package]

name = "piston_shooty"
version = "0.1.0"
authors = [
    "Andre Duvoisin <anduv13@gmail.com>",
    "Dru Erridge <druerridge@gmail.com>"
]
edition = "2018"

[[bin]]
name = "piston_shooty"

[dependencies]
piston = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston_window = "*"
gfx_device_gl = "*"
time = "*"
find_folder = "*"
ears = "*"
ncollide2d = "*"
nalgebra = "*"
csv = "*"
conrod_core = "*"
conrod_piston = "*"