[package]

name = "piston_shooty"
version = "0.1.0"
authors = [
    "Andre Duvoisin <anduv13@gmail.com>",
    "Dru Erridge <druerridge@gmail.com>"
]
edition = "2018"

[[bin]]
name = "piston_shooty"

[dependencies]
piston = "0.39.0"
piston2d-graphics = "0.28.0"
pistoncore-glutin_window = "*"
piston_window = "0.85.0"
gfx_device_gl = "*"
time = "*"
find_folder = "*"
ears = "*"
ncollide2d = "*"
nalgebra = "*"
csv = "*"
conrod_core = "*"
conrod_piston = "0.62.0"