[package]

name = "piston_shooty"
version = "0.1.0"
authors = [
    "Andre Duvoisin <anduv13@gmail.com>",
    "Dru Erridge <druerridge@gmail.com>"
]
edition = "2018"

[[bin]]
name = "piston_shooty"

[dependencies]
piston = "0.39.0"
piston2d-graphics = "0.28.0"
pistoncore-glutin_window = "0.51.1"
piston_window = "0.85.0"
gfx_device_gl = "0.15.5"
time = "0.1.42"
find_folder = "0.3.0"
ears = "0.5.1"
ncollide2d = "0.17.3"
nalgebra = "0.16.13"
csv = "1.0.5"
conrod_core = "0.62.0"
conrod_piston = "0.62.0"